syntax = "proto3";
package h2x.clob;

import "h2x/clob/clob_pair.proto";

option go_package = "github.com/h2x/v4-chain/protocol/x/clob/types";

// ClobStagedFinalizeBlockEvent defines a CLOB event staged during
// FinalizeBlock.
message ClobStagedFinalizeBlockEvent {
  // event is the staged event.
  oneof event {
    // create_clob_pair indicates a new CLOB pair creation.
    ClobPair create_clob_pair = 1;
  }
}
